fix: overflow

--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -33,7 +33,7 @@
   justify-content: center;
   align-items: center;
 
-  overflow: scroll;
+  overflow: hidden;
   border: 1px solid rgb(41, 41, 41);
   border-radius: 20px;
 
